--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body data-bs-spy="scroll" data-bs-target=".navbar">
     <nav class="navbar navbar-expand-lg navbar-light bg-body fixed-top py-2">
         <div class="container">
-          <a class="navbar-brand" href="#"><h4 class="fw-bold">Morph.</h4></a>
+          <a class="navbar-brand" href="#"><h4 class="fw-bold">Zafira.</h4></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -21,18 +21,18 @@
               <li class="nav-item">
                 <a class="nav-link" href="#hero">Home</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="#services">Services</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="#works">Works</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#resume">Resume</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="#testimonial">Testimonial</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
               </li>
@@ -45,11 +45,11 @@
         <div class="container">
             <div class="row align-items-center gy-4">
                 <div class="col-lg-5">
-                    <img src="images/hero.png"  class="img-fluid" alt="hi">
+                    <img src="images/hero.JPG"  class="img-fluid" alt="hi">
                 </div>
                 <div class="col-lg-6">
-                    <h1 class="fw-bold display-4">I am a creative <span class="text-info">Designer</span></h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias iure voluptatem veritatis numquam tenetur voluptas quibusdam doloremque.</p>
+                    <h1 class="fw-bold display-4">I am a creative <br><span class="text-info">Web Developer</span></h1>
+                    <p>Hi, I am Zafira . Unveiling new opportunities in technical diversity.Passionated in web development and designing.</p>
                     <a href="#works" class="btn btn-outline-info me-3">My Works</a>
                     <a href="#contact" class="btn btn-info">Contact Me</a>
                 </div>
@@ -59,7 +59,7 @@
     <!-- /Hero section -->
 
     <!-- service section -->
-    <div id="services" class="section-padding divider">
+    <!-- <div id="services" class="section-padding divider">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -118,7 +118,7 @@
                 </div>
              </div>    
         </div>
-    </div>
+    </div> -->
       <!-- /service section -->
 
       <!-- works -->
@@ -128,7 +128,7 @@
             <div class="col-12">
               <div class="work text-center mb-4">
               <h1 class=" fw-bold">Works</h1>
-              <p class="mx-auto">There are many variations of passages of Lorem Ipsum available but the majority have suffered alteration in some form by injected humour
+              <p class="mx-auto">Services which  i'am providing listed below
               </p>
               </div>
             </div>
@@ -137,45 +137,45 @@
             <div class="col-md-6 col-lg-4">
               <div class="work-card p-4 rounded-4 shadow border-hover">
                 <img class="img-fluid rounded-5 mb-2" src="images/project-01.jpg" alt="">
-                <span class="badge bg-info mb-2">UI Design</span>
-                <a href="#" class="d-block fw-bold"><h4 class="fw-bold">Project heading</h4></a>
+                <span class="badge bg-info mb-2">Software development</span>
+                <a href="#" class="d-block fw-bold"><h4 class="fw-bold">Software Maintenance,developing & Reviewing</h4></a>
               </div>
             </div>
             <div class="col-md-6 col-lg-4">
               <div class="work-card p-4 rounded-4 shadow border-hover">
-                <img class="img-fluid rounded-5 mb-2" src="images/project-01.jpg" alt="">
+                <img class="img-fluid rounded-5 mb-2" src="images/project-05.jpg" alt="">
                 <span class="badge bg-info mb-2">UI Design</span>
-                <a href="#" class="d-block fw-bold"><h4 class="fw-bold">Project heading</h4></a>
+                <a href="#" class="d-block fw-bold"><h4 class="fw-bold">Passionated in creating designs</h4></a>
               </div>
             </div>
             <div class="col-md-6 col-lg-4">
               <div class="work-card p-4 rounded-4 shadow border-hover">
-                <img class="img-fluid rounded-5 mb-2" src="images/project-01.jpg" alt="">
-                <span class="badge bg-info mb-2">UI Design</span>
-                <a href="#" class="d-block fw-bold"><h4 class="fw-bold">Project heading</h4></a>
+                <img class="img-fluid rounded-5 mb-2" src="images/project-03.jpg" alt="">
+                <span class="badge bg-info mb-2">Dynamic web services</span>
+                <a href="#" class="d-block fw-bold"><h4 class="fw-bold">Static and dynamic web development</h4></a>
               </div>
             </div>
           </div>
           <div class="row gy-4">
             <div class="col-md-6 col-lg-4">
               <div class="work-card p-4 rounded-4 shadow border-hover">
-                <img class="img-fluid rounded-5 mb-2" src="images/project-01.jpg" alt="">
-                <span class="badge bg-info mb-2">UI Design</span>
-                <a href="#" class="d-block fw-bold"><h4 class="fw-bold">Project heading</h4></a>
+                <img class="img-fluid rounded-5 mb-2" src="images/project-02.jpg" alt="">
+                <span class="badge bg-info mb-2">Database Management</span>
+                <a href="#" class="d-block fw-bold"><h4 class="fw-bold">Mysql,MariaDB,Data integration,Normalisation</h4></a>
               </div>
             </div>
             <div class="col-md-6 col-lg-4">
               <div class="work-card p-4 rounded-4 shadow border-hover">
-                <img class="img-fluid rounded-5 mb-2" src="images/project-01.jpg" alt="">
-                <span class="badge bg-info mb-2">UI Design</span>
-                <a href="#" class="d-block fw-bold"><h4 class="fw-bold">Project heading</h4></a>
+                <img class="img-fluid rounded-5 mb-2" src="images/project-03.jpg" alt="">
+                <span class="badge bg-info mb-2">MVC Framework</span>
+                <a href="#" class="d-block fw-bold"><h4 class="fw-bold">Industry standard web framework</h4></a>
               </div>
             </div>
             <div class="col-md-6 col-lg-4">
               <div class="work-card p-4 rounded-4 shadow border-hover">
-                <img class="img-fluid rounded-5 mb-2" src="images/project-01.jpg" alt="">
-                <span class="badge bg-info mb-2">UI Design</span>
-                <a href="#" class="d-block fw-bold"><h4 class="fw-bold">Project heading</h4></a>
+                <img class="img-fluid rounded-5 mb-2" src="images/project-04.jpg" alt="">
+                <span class="badge bg-info mb-2">CMS </span>
+                <a href="#" class="d-block fw-bold"><h4 class="fw-bold">Wordpress-Themes,plugin implements</h4></a>
               </div>
             </div>
           </div>
@@ -191,44 +191,54 @@
               <div class="col-12">
                 <div class="resume text-center mb-4">
                   <h1 class="fw-bold text-center">Resume</h1>
-                  <p class="mx-auto">There are many variations of passages of Lorem Ipsum available but the majority have suffered alteration in some form by injected humour</p>
+                  <p class="mx-auto">Let's go through my smooth-paced technical journey</p>
                 </div>
               </div>
             </div>
-            <div class="row  gy-4 gx-4 rounded-5 border-hover shadow p-4">
+            
+            <div class="row  gy-4 gx-4 rounded-5 border-hover shadow p-4 mt-3">
               <div class="col-md-3">
-                <img class="img-fluid" src="images/logo-01.svg" alt="">
+                <!-- <img class="img-fluid" src="images/logo-02.svg" alt=""> -->
+                <p class="fw-bolder fst-italic">Soften Technologies,Kochi</p>
               </div>
               <div class="col-md-3">
-                <h5>UX Designer</h5>
-                <small class="text-info">2014-2018</small>
+                <h5>Junior Developer(Internship)</h5>
+                <small class="text-info">2018-2019</small>
               </div>
               <div class="col-md-6">
-                <p class="text-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, commodi architecto consequuntur minus ea obcaecati sed provident tenetur.</p>
+                <p class="text-info">For one year, i've done an internship in web development with languages like php,java,html,css,javascript etc.</p>
               </div>
             </div>
             <div class="row  gy-4 gx-4 rounded-5 border-hover shadow p-4 mt-3">
               <div class="col-md-3">
-                <img class="img-fluid" src="images/logo-02.svg" alt="">
+                <!-- <img class="img-fluid" src="images/logo-03.svg" alt=""> -->
+                <p class="fw-bolder fst-italic">BMO SOFT,India</p>
+
               </div>
               <div class="col-md-3">
-                <h5>UX Designer</h5>
-                <small class="text-info">2014-2018</small>
+                <h5>Software Developer</h5>
+                <small class="text-info">2019-2021</small>
               </div>
               <div class="col-md-6">
-                <p class="text-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, commodi architecto consequuntur minus ea obcaecati sed provident tenetur.</p>
+                <p class="text-info">Stepped into a new position where i've looked so far to exhibit and gain new skills apart from junior level.During this period,got a lot of opportunities to work with new languages and frameworks both in back-end and front-end side.
+                  Explored technologies like Laravel,hibernate,spring,React js etc.
+                </p>
               </div>
             </div>
+
             <div class="row  gy-4 gx-4 rounded-5 border-hover shadow p-4 mt-3">
               <div class="col-md-3">
-                <img class="img-fluid" src="images/logo-03.svg" alt="">
+                <!-- <img class="img-fluid" src="images/logo-03.svg" alt=""> -->
+                <p class="fw-bolder fst-italic">WEEN Network LLC,Dubai</p>
+
               </div>
               <div class="col-md-3">
-                <h5>UX Designer</h5>
-                <small class="text-info">2014-2018</small>
+                <h5>Software Developer</h5>
+                <small class="text-info">2023-present</small>
               </div>
               <div class="col-md-6">
-                <p class="text-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, commodi architecto consequuntur minus ea obcaecati sed provident tenetur.</p>
+                <p class="text-info">A best platform for master-diverse latest web technologies and techniques.Designed and developed a 
+                  booking management project.Technologies user are: Laravel,AWS mail server,Stripe,CMS- wordpress</p>
               </div>
             </div>
 
@@ -241,19 +251,33 @@
               <div class="col-12">
                 <div class="skills text-center">
                   <h1 class="fw-bold">MY Skills</h1>
-                  <p class="mx-auto">There are many variations of passages of Lorem Ipsum available but the majority have suffered alteration in some form by injected humou</p>
+                  <p class="mx-auto">Here are the skills i have!!</p>
                 </div>
               </div>
             </div>
             <div class="row gy-4 gx-6">
               <div class="col-md-6 mb-2">
-                <h5 class="small text-info">HTML</h5>
+                <h5 class="small text-info">Laravel</h5>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
               <div class="col-md-6">
-                <h5 class="small text-info">css</h5>
+                <h5 class="small text-info">Jquery</h5>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+            </div>
+            <div class="row gy-4 gx-6">
+              <div class="col-md-6 mb-2">
+                <h5 class="small text-info">Java</h5>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <h5 class="small text-info">Php</h5>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -267,9 +291,37 @@
                 </div>
               </div>
               <div class="col-md-6">
-                <h5 class="small text-info">React js</h5>
+                <h5 class="small text-info">Javascript</h5>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+            </div>
+            <div class="row gy-4 gx-6">
+              <div class="col-md-6 mb-2">
+                <h5 class="small text-info">HTML</h5>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <h5 class="small text-info">CSS</h5>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+            </div>
+            <div class="row gy-4 gx-6">
+              <div class="col-md-6 mb-2">
+                <h5 class="small text-info">React Js</h5>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <h5 class="small text-info">Sql</h5>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
             </div>
@@ -278,6 +330,27 @@
           </div>
         </div>
       <!-- /Resume -->
+
+      <!-- Contact ME -->
+
+      <div id="contact" class="section-padding divider">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <div class="work text-center mb-4">
+              <h1 class=" fw-bold">Contact Me</h1>
+              <p class="mx-auto">Kindly ping me on..
+              </p>
+              <br><br>
+              <div class="p-4 rounded-4 shadow border-hover">
+              <h1 class=" text-center  display-5">zafirakv8@gmail.com<br><span class="text-info">+971 569477079</span></h1>
+            </div>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /Contact Me -->
       
     <script src="js/script.js"></script>
     <script src="js/bootstrap.min.bundle.js"></script>
