--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
               </div>
               <div class="col-md-3">
-                <h5>Software Developer</h5>
+                <h5>Web Developer</h5>
                 <small class="text-info">2023-present</small>
               </div>
               <div class="col-md-6">
@@ -256,7 +256,7 @@
               </div>
             </div>
             <div class="row gy-4 gx-6">
-              <div class="col-md-6 mb-2">
+              <div class="col-md-6 mt-2">
                 <h5 class="small text-info">Laravel</h5>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -270,7 +270,7 @@
               </div>
             </div>
             <div class="row gy-4 gx-6">
-              <div class="col-md-6 mb-2">
+              <div class="col-md-6 mt-2">
                 <h5 class="small text-info">Java</h5>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -284,7 +284,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-6 mb-2">
+              <div class="col-md-6 mt-2">
                 <h5 class="small text-info">bootstrap</h5>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -298,7 +298,7 @@
               </div>
             </div>
             <div class="row gy-4 gx-6">
-              <div class="col-md-6 mb-2">
+              <div class="col-md-6 mt-2">
                 <h5 class="small text-info">HTML</h5>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -312,7 +312,7 @@
               </div>
             </div>
             <div class="row gy-4 gx-6">
-              <div class="col-md-6 mb-2">
+              <div class="col-md-6 mt-2">
                 <h5 class="small text-info">React Js</h5>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
