--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               </div>
               <div class="col-md-6">
                 <p class="text-info">A best platform for master-diverse latest web technologies and techniques.Designed and developed a 
-                  booking management project.Technologies user are: Laravel,AWS mail server,Stripe,CMS- wordpress</p>
+                  booking management project.Technologies used: Laravel,AWS mail server,Stripe,CMS- wordpress</p>
               </div>
             </div>
 
