--- a/index.html
+++ b/index.html
@@ -324,6 +324,13 @@
                   <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
+
+                 <div class="col-md-6">
+                <h5 class="small text-info">Figma</h5>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
             </div>
 
 
